<resources>
    <string name="app_name">My Application2</string>
    <string name="your_phone">Your Phone</string>
    <string name="please_confirm_your_phone_number_to_prove_that_is_valid">Please confirm your phone number to prove that is valid</string>
    <string name="_123_456_789_0">123-456-789-0</string>
    <string name="we_ll_send_you_an_sms_code_please_enter_the_code">We\'ll send you an sms code. Please enter the code</string>
    <string name="sms_verification">SMS Verification</string>
    <string name="resend_it">RESEND IT</string>
    <string name="didn_t_recieve_the_code">Didn\'t recieve the code?</string>
    <string name="get_sms">GET SMS</string>
    <string name="_7">+7-</string>
    <string name="verify">Verify</string>
    <string name="welcome_to_our">Welcome To Our</string>
    <string name="let_s_go">Let\'s Go</string>
    <string name="messenger">Messenger</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="we_ll_send_you_an_sms_code_to_verify_your_phone_number">We\'ll send you an SMS code to verify your phone number</string>
    <string name="add_image">Add Image</string>
    <string name="please_enter_your_first_name_and_last_name">Please enter your First name and Last name</string>
    <string name="submit">Submit</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="chats">Chats</string>
    <string name="pinned_chats">Pinned Chats</string>
    <string name="search">Search...</string>
    <string name="other_chats">Other Chats</string>
    <string name="calls">Calls</string>
    <string name="chat">Chat</string>
    <string name="settings">Settings</string>
    <string name="Settings">...</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="welcome_back">Welcome_back</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_new_account">Create New Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="please_enter_first_last_name_and_profile_photo">Please Enter First, Last name and Profile Photo</string>
    <string name="title_activity_users">UsersActivity</string>
    <string name="select_user">Select User</string>
</resources>