<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".VerificationPart.NameSurnamePage">

    <FrameLayout
        android:id="@+id/profile_image_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/profile_image"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:background="@drawable/profile_photo_shape"
            android:scaleType="centerCrop"
            >

        </com.makeramen.roundedimageview.RoundedImageView>

        <TextView
            android:id="@+id/add_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/monolisa_bold"
            android:text="@string/add_image"
            android:textSize="11sp"
            android:textColor="@color/colorTextPrimary"
            />
    </FrameLayout>


    <TextView
        android:layout_width="280dp"
        android:layout_height="51dp"
        android:layout_marginTop="@dimen/_8sdp"
        android:fontFamily="@font/monolisa_bold"
        android:gravity="center"
        android:text="@string/please_enter_first_last_name_and_profile_photo"
        android:textAlignment="center"
        android:textColor="@color/colorTextPrimary">
    </TextView>

    <EditText
        android:id="@+id/first_name_input"
        android:layout_width="@dimen/_220sdp"
        android:layout_height="@dimen/_40sdp"
        android:background="@drawable/background2"
        android:textColorHint="@color/black"
        android:layout_marginTop="@dimen/_20sdp"
        android:importantForAutofill="no"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:imeOptions="actionDone"
        android:textColor="@color/colorTextPrimary"
        android:fontFamily="@font/monolisa_bold"
        android:hint="@string/first_name"/>

    <EditText
        android:id="@+id/last_name_input"

        android:layout_width="@dimen/_220sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:background="@drawable/background2"
        android:textColorHint="@color/colorTextPrimary"
        android:importantForAutofill="no"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:imeOptions="actionDone"
        android:textColor="@color/colorTextPrimary"
        android:fontFamily="@font/monolisa_bold"
        android:hint="@string/last_name"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_20sdp">

        <ImageView
            android:id="@+id/Botton_background"
            android:layout_width="@dimen/_115sdp"
            android:layout_height="@dimen/_32sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/background1"

            >

        </ImageView>
        <Button
            android:layout_gravity="center"
            android:id="@+id/submit_button"
            android:layout_width="@dimen/_110sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:fontFamily="@font/monolisa_bold"
            android:text="@string/submit"
            android:textColor="@color/colorTextTertiary" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="@dimen/_32sdp"
            android:layout_height="@dimen/_32sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_18sdp"
            android:visibility="gone">

        </ProgressBar>
    </FrameLayout>

</LinearLayout>