<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:overScrollMode="never"
    android:scrollbars="none"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".VerificationPart.SendOTP_Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/auth_image"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_170sdp"
            app:srcCompat="@drawable/otp_verification" />
        <TextView
            android:id="@+id/OTP_Verification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/monolisa_bold"
            android:textSize="28sp"
            android:textColor="@color/colorTextPrimary"
            android:text="@string/otp_verification"
            android:textAlignment="center"
            />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_26sdp"
            android:gravity="center"
            android:text="@string/we_ll_send_you_an_sms_code_to_verify_your_phone_number"
            android:textColor="#676767"
            android:textSize="12sp" />

        <View
            android:id="@+id/divider"
            android:layout_width="@dimen/_180sdp"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginTop="@dimen/_27sdp"
            android:background="@color/colorPrimary"
            android:backgroundTint="@color/black"
            android:layout_gravity="center" />

        <com.hbb20.CountryCodePicker
            android:id="@+id/ccp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_7sdp"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/input_mobile"
                android:layout_width="@dimen/_170sdp"
                android:layout_height="@dimen/_40sdp"
                android:ems="10"
                android:fontFamily="@font/monolisa_bold"
                android:hint="@string/_123_456_789_0"
                android:textColorHint="#FFD555"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textColor="@color/colorTextPrimary"
                android:background="@drawable/background2"
                android:maxLength="10"

                android:textSize="22sp"
                android:textAlignment="center"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.56"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            />
        <Button
            android:id="@+id/buttonGetOTP"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/background2"
            android:fontFamily="@font/monolisa_bold"
            android:text="@string/get_sms"
            android:textColor="@color/colorTextTertiary"
            android:textSize="20sp" />
        />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_minus32sdp"
            android:visibility="gone"
            />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@color/colorAccent" />


    </LinearLayout>
</ScrollView>