<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".HomePage.HomePage">

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/image_profile"
        android:layout_width="@dimen/_44sdp"
        android:layout_height="@dimen/_44sdp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/background2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="centerCrop"
        app:riv_corner_radius="@dimen/_8sdp"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="26dp"
        android:fontFamily="@font/monolisa_bold"
        android:text="@string/chats"
        android:textColor="@color/black"

        android:textSize="@dimen/_20sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageSignOut"
        android:layout_width="@dimen/_33sdp"
        android:layout_height="@dimen/_33sdp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/background2"
        android:src="@drawable/log_out"
        android:paddingEnd="@dimen/_8sdp"
        android:paddingStart="@dimen/_4sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
         />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="@dimen/_301sdp"
        android:layout_height="71dp"
        android:layout_marginTop="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


    </FrameLayout>




    <ImageView
        android:id="@+id/bar"
        android:layout_width="@dimen/_270sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_gravity="center"
        android:layout_marginTop="108dp"
        android:background="@drawable/background2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/magnigier_glass"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_gravity="center_vertical|start"

        android:src="@drawable/magnifier_glass"
        app:layout_constraintEnd_toStartOf="@+id/search_bar"
        app:layout_constraintStart_toStartOf="@+id/bar"
        app:layout_constraintTop_toTopOf="@+id/bar"
        app:layout_constraintBottom_toBottomOf="@id/bar"/>

    <EditText
        android:id="@+id/search_bar"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_gravity="center_vertical|start"
        android:background="@android:color/transparent"
        android:fontFamily="@font/montaga_regular"
        android:hint="@string/search"
        android:inputType="text"
        android:textColor="#1B1C1E"
        android:textColorHint="#1B1C1E"
        android:textSize="@dimen/_20sdp"
        app:layout_constraintEnd_toEndOf="@id/bar"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/magnigier_glass"
        app:layout_constraintTop_toTopOf="@id/bar"
        app:layout_constraintBottom_toBottomOf="@id/bar"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@drawable/background_content_bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_bar"
        />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/FabNewChat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_24sdp"
        android:layout_marginBottom="@dimen/_24sdp"
        android:contentDescription="@string/app_name"
        android:backgroundTint="@color/colorPrimary"
        android:src="@drawable/new_users"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>